.kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-app-frontend-service
spec:
  selector:
    app: patient-app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
